# llm_pharma

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
backend/: README.md  helper_functions.py  patient_collector.py  test_policy_search.py
backend/my_agent/: State.py  database_manager.py  llm_manager.py  logging_config.py  patient_collector.py  policy_service.py  policy_tool_helpers.py  trial_service.py  workflow_manager.py
backend/my_agent/policy/: __init__.py  evaluator.py  searcher.py
config/: config.yaml
frontend/: README.md  __init__.py  app.py  demo_graph.py  helper_gui.py  style.css
modal/: gradio_app.py
notebooks/: llm_agents_pharma.ipynb  llm_pharma_prototype.ipynb
scripts/: README.md  create_patients_database.py  create_policies_vectorstore.py  create_trials_vectorstore.py  setup_all_data.py
src/: helper_gui.py
tests/: README.md  __init__.py  conftest.py  test_dashboard.py  test_database_manager.py  test_end_to_end.py  test_helper_functions_imports.py  test_patient_collection_fix.py  test_patient_collector.py  test_patient_collector_module.py  test_policy_evaluator.py  test_policy_search.py  test_policy_service.py  test_trial_search.py  test_trial_service.py
tests/integration/: test_dashboard_demo.py
tests/regression/: test_dashboard.py  test_database_manager.py  test_end_to_end.py  test_helper_functions_imports.py  test_patient_collection_fix.py  test_patient_collector.py  test_patient_collector_module.py  test_patient_service_llm.py  test_policy_evaluator.py  test_policy_search.py  test_policy_service.py  test_profile_rewrite_workflow.py  test_trial_search.py  test_trial_service.py  test_trial_workflow.py
tests/unit/: test_llm_manager.py  test_patient_service.py  test_state.py
