[tool.poetry]
name = "llm-pharma"
version = "0.1.0"
description = "LLM-powered clinical trial management system"
authors = ["Bob Hosseini <bobhosseini@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false
keywords = ["llm", "pharma", "clinical-trials", "langchain", "gradio", "ai", "workflow"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.12"
chromadb = "1.0.15"
fastapi = "0.116.1"
gpt4all = "2.8.2"
gradio = "5.38.0"
hydra-core = "1.3.2"
ipykernel = "6.29.5"
langchain = "0.3.26"
langchain-community = "0.3.27"
langchain-core = "0.3.69"
langchain-nomic = "0.1.4"
langchain-openai = "0.3.28"
langgraph-checkpoint-sqlite = "2.0.10"
langgraph = "0.5.4"
langsmith = "0.4.6"
langchain-groq = "0.3.6"
lark = "1.2.2"
matplotlib = "3.10.3"
matplotlib-inline = "0.1.7"
nomic = "3.5.3"
numpy = "2.3.1"
pandas = "2.3.1"
pillow = "10.4.0"
pydantic_core = "2.33.2"
# pygraphviz = "1.14"
python-dotenv = "1.1.0"
requests = "2.32.3"
starlette = "0.46.2"
uvicorn = "0.34.2"

[tool.poetry.group.dev.dependencies]
pytest = "*"
black = "*"
isort = "*"
flake8 = "*"
mypy = "*"
# only importable packages
pre-commit = "^4.2.0"
modal = "^1.1.0"

[[tool.poetry.packages]]
include = "backend"

[[tool.poetry.packages]]
include = "frontend"


[tool.poetry.scripts]
setup-all-data = "scripts.setup_all_data:main"
create-patients-database = "scripts.create_patients_database:main"
create-policies-vectorstore = "scripts.create_policies_vectorstore:main"
create-trials-vectorstore = "scripts.create_trials_vectorstore:main"
run-frontend = "frontend.app:main"

[tool.poetry.urls]
homepage = "https://github.com/bobhosseini/llm-pharma"
repository = "https://github.com/bobhosseini/llm-pharma"
documentation = "https://github.com/bobhosseini/llm-pharma#readme"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
# rules to check/fix
select = ["E", "F"]
ignore = ["E501"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q" 